# Dodger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh
.ropeproject/: globalnames
analysis/: run.py  table.py
config/: config.rviz  tf.launch
data/: pf_speed_noise_0.csv  pf_speed_noise_0.txt  pf_speed_noise_1.csv  pf_speed_noise_2.csv  planner_speed_noise_0.csv  planner_speed_noise_0.txt  planner_speed_noise_1.csv  planner_speed_noise_2.csv  planner_wait_0.csv
examples/: frogger.cpp  pendulum.cpp  pf_scene_0.cpp  pf_scene_1.cpp  pf_scene_2.cpp  planner_scene_1.cpp  planner_scene_2.cpp  potential.cpp  replanner.cpp  stochastic.cpp
experiments/: pf_speed_noise_0.cpp  pf_speed_noise_1.cpp  pf_speed_noise_2.cpp  planner_speed_noise.cpp  planner_speed_noise_0.cpp  planner_speed_noise_1.cpp  planner_speed_noise_2.cpp  planner_wait_0.cpp
instances/: result.json
maps/: test.hpp
sandbox/: agent_exp.py
sandbox/demos/: awesome_temporal.avi
sandbox/searches/: dodger_example.json  frogger  frogger.json  pendulum  pendulum.json  pf_example.json  pf_scene_0.json  pf_scene_1.json  pf_scene_2.json  planner_speed_noise.json  potential.json  replanner.json  result.json
sandbox/vids/: frogger.avi  pendulum.avi  replanner.avi
scripts/: agent.py  animator.py  create_scene.py  drawer.py  easy_ros.sh  easy_run.sh  map_generator.py  mkmovie.sh  model.py  path.py  point.py  run_animator.py  run_demo.sh  run_drawer.py  run_ros_animator.py  run_ros_screenshots.py  run_search.sh  stpoint.py  util.py
src/: agent.cpp  agent.hpp  dodger.hpp  grid.cpp  grid.hpp  model.cpp  model.hpp  obstacle.cpp  obstacle.hpp  path.cpp  path.hpp  pf.cpp  pf.hpp  planner.cpp  planner.hpp  point.cpp  point.hpp  rmgenerator.cpp  rmgenerator.hpp  roadmap.cpp  roadmap.hpp  search.cpp  search.hpp  stats.cpp  stats.hpp  stpoint.cpp  stpoint.hpp  util.cpp  util.hpp
src/include/: point.hpp
tests/: test_grid.cpp  test_point.cpp  test_roadmap.cpp  test_search.cpp  test_st_point.cpp
